syntax = "proto3";

package secrets;

option go_package = "github.com/vorteil/direktiv/pkg/secrets";

import "google/protobuf/empty.proto";

import "pkg/secrets/secrets.proto";

service SecretsService {
  rpc CreateBucket(SecretsCreateBucketRequest) returns (SecretsCreateBucketResponse) {}
  rpc DeleteBucket(SecretsDeleteBucketRequest) returns (google.protobuf.Empty)  {}
  rpc StoreSecret(SecretsStoreRequest) returns (google.protobuf.Empty)  {}
  rpc RetrieveSecret(SecretsRetrieveRequest) returns (SecretsRetrieveResponse)  {}
  rpc DeleteSecret(SecretsDeleteRequest) returns (SecretsDeleteResponse)  {}
  rpc GetSecrets(GetSecretsRequest) returns (GetSecretsResponse)  {}
  rpc GetSecretsWithData(GetSecretsRequest) returns (GetSecretsDataResponse)  {}
}
