syntax = "proto3";

package secrets;

option go_package = "github.com/vorteil/direktiv/pkg/secrets";

enum SecretTypes {
  SECRET = 0;
  REGISTRY = 1;
}

message SecretsDeleteBucketRequest {
	optional string namespace = 1;
}

message SecretsCreateBucketRequest {
	optional string namespace = 1;
}

message SecretsCreateBucketResponse {
	optional bytes pkey = 1;
}

message SecretsStoreRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional bytes data = 3;
  optional SecretTypes stype = 4;
}

message SecretsRetrieveRequest {
	optional string namespace = 1;
	optional string name = 2;
}

message SecretsDeleteRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional SecretTypes stype = 3;
}

message SecretsDeleteResponse {
	optional int32 count = 1;
}

message SecretsRetrieveResponse {
	optional bytes data = 3;
}

message GetSecretsRequest {
	optional string namespace = 1;
  optional SecretTypes stype = 2;
}

message GetSecretsResponse {
	message Secret {
		optional string name = 1;
	}
	repeated Secret secrets = 1;
}

message GetSecretsDataResponse {
	message Secret {
		optional string name = 1;
    optional bytes data = 2;
	}
	repeated Secret secrets = 1;
}
